# beit_segmentation

./: Dockerfile  README.md  cloudbuild.sh  cloudbuild.yaml  package.xml  setup.cfg  setup.py
.github/workflows/: build.yaml
<name>/: <name>.py  palette.py
beit_seg/: beit_seg.py
