<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beit_seg</name>
  <version>0.0.0</version>
  <description>BEiT takes the traditional NLP transformer BERT and trains it for the image classification and segmentation tasks. 
  It does this by creating visual tokens and "tokenizes" the image. 
  The results achieve competitive results and can be used for image classification in this registry.</description>
  <maintainer email="support@shaderobotics.com">Shade Robotics</maintainer>
  <license>apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend></depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
